unpackaged/main/default/objects/GetFeedBack_Results__c/GetFeedBack_Results__c.object-meta.xml
<CustomObject>
    <label>Survey Results</label>
    <nameField>
        <label>GetFeedBack Results Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GetFeedBack Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>