unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Able_to_apply_knowledge_learned__c.field-meta.xml
<CustomField>
    <fullName>Able_to_apply_knowledge_learned__c</fullName>
    <label>Able to apply knowledge learned</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>