unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Accuracy_NCM_Composite_PTA__c.field-meta.xml
<CustomField>
    <fullName>Accuracy_NCM_Composite_PTA__c</fullName>
    <label>Accuracy NCM Composite/PTA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>