unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Accuracy_NCM_Composite_PTA_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Accuracy_NCM_Composite_PTA_Explanation__c</fullName>
    <label>Accuracy NCM Composite/PTA Explanation</label>
    <type>TextArea</type>
</CustomField>