unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Accuracy_of_data_in_your_composite__c.field-meta.xml
<CustomField>
    <fullName>Accuracy_of_data_in_your_composite__c</fullName>
    <label>20 Group Survey Composite Data Accuracy</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>