unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Adequate_time_for_breaks_meals__c.field-meta.xml
<CustomField>
    <fullName>Adequate_time_for_breaks_meals__c</fullName>
    <label>Adequate time for breaks/meals</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>