unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Adequate_time_was_provided_for_questions__c.field-meta.xml
<CustomField>
    <fullName>Adequate_time_was_provided_for_questions__c</fullName>
    <label>Adequate time was provided for questions</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>