unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Amount_of_information_about_right__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_information_about_right__c</fullName>
    <label>Amount of information about right</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>