unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Average_Score__c.field-meta.xml
<CustomField>
    <fullName>Average_Score__c</fullName>
    <formula>( Accuracy_of_data_in_your_composite__c  +  How_did_Moderator_manage_the_group__c  +  How_Prepared_was_Your_Moderator__c  +  Recommend_NCM_to_Peers_NPS__c  +  Relevant_Agenda_Topics_to_Challenges__c  +  Satisfaction_with_set_up_and_pre_work__c )/6</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>