unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Becky_Interactive_Addressed_Concerns__c.field-meta.xml
<CustomField>
    <fullName>Becky_Interactive_Addressed_Concerns__c</fullName>
    <label>Becky: Interactive/Addressed Concerns</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>