unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Becky_interesting_practical__c.field-meta.xml
<CustomField>
    <fullName>Becky_interesting_practical__c</fullName>
    <label>Becky:interesting/practical</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>