unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Becky_Met_Training_Objectives__c.field-meta.xml
<CustomField>
    <fullName>Becky_Met_Training_Objectives__c</fullName>
    <label>Becky: Met Training Objectives</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>