unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Becky_Presenter_was_knowledgeable__c.field-meta.xml
<CustomField>
    <fullName>Becky_Presenter_was_knowledgeable__c</fullName>
    <label>Becky: Presenter was knowledgeable</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>