unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Better_Manage_Dealership_Assets__c.field-meta.xml
<CustomField>
    <fullName>Better_Manage_Dealership_Assets__c</fullName>
    <label>Better Manage Dealership Assets</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>