unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Bob_P_Interesting_Addressed_Concerns__c.field-meta.xml
<CustomField>
    <fullName>Bob_P_Interesting_Addressed_Concerns__c</fullName>
    <label>Bob P: Interesting/Addressed Concerns</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>