unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Bob_P_Interesting_Practical__c.field-meta.xml
<CustomField>
    <fullName>Bob_P_Interesting_Practical__c</fullName>
    <label>Bob P:interesting/practical</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>