unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Bob_P_Presenter_was_knowledgeable__c.field-meta.xml
<CustomField>
    <fullName>Bob_P_Presenter_was_knowledgeable__c</fullName>
    <label>Bob P: Presenter was knowledgeable</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>