unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Bob_S_Presenter_was_knowledgeable__c.field-meta.xml
<CustomField>
    <fullName>Bob_S_Presenter_was_knowledgeable__c</fullName>
    <label>Bob S: Presenter was knowledgeable</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>