unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Brent_Interactive_Addressed_Concerns__c.field-meta.xml
<CustomField>
    <fullName>Brent_Interactive_Addressed_Concerns__c</fullName>
    <label>Brent: Interactive/Addressed Concerns</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>