unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Brent_interesting_practical__c.field-meta.xml
<CustomField>
    <fullName>Brent_interesting_practical__c</fullName>
    <label>Brent:interesting/practical</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>