unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Brent_Met_Training_Objectives__c.field-meta.xml
<CustomField>
    <fullName>Brent_Met_Training_Objectives__c</fullName>
    <label>Brent: Met Training Objectives</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>