unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Brent_Presenter_was_knowledgeable__c.field-meta.xml
<CustomField>
    <fullName>Brent_Presenter_was_knowledgeable__c</fullName>
    <label>Brent: Presenter was knowledgeable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>