unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Chelsea_Interactive_Addressed_Concerns__c.field-meta.xml
<CustomField>
    <fullName>Chelsea_Interactive_Addressed_Concerns__c</fullName>
    <label>Chelsea: Interactiv &amp; Addressed Concerns</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>