unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Chelsea_M_interesting_practical__c.field-meta.xml
<CustomField>
    <fullName>Chelsea_M_interesting_practical__c</fullName>
    <label>Chelsea M:interesting/practical</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>