unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Chelsea_M_Met_Training_Objectives__c.field-meta.xml
<CustomField>
    <fullName>Chelsea_M_Met_Training_Objectives__c</fullName>
    <label>Chelsea M: Met Training Objectives</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>