unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Comments_Suggestions__c.field-meta.xml
<CustomField>
    <fullName>Comments_Suggestions__c</fullName>
    <label>Comments &amp; Suggestions</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>