unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Composite_Data_Accuracy_Explanation_del__c.field-meta.xml
<CustomField>
    <fullName>Composite_Data_Accuracy_Explanation_del__c</fullName>
    <label>20 Group Survey Composite Data Accu Expl</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>