unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Consultant_E__c.field-meta.xml
<CustomField>
    <fullName>Consultant_E__c</fullName>
    <label>Consultant Preparation Explanation</label>
    <type>TextArea</type>
</CustomField>