unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Consultant_Preparation__c.field-meta.xml
<CustomField>
    <fullName>Consultant_Preparation__c</fullName>
    <label>Consultant Preparation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>