unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Consultant_Time_Agenda_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Consultant_Time_Agenda_Explanation__c</fullName>
    <label>Consultant Time/Agenda Explanation</label>
    <type>TextArea</type>
</CustomField>