unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Consultant_Time_Agenda_Management__c.field-meta.xml
<CustomField>
    <fullName>Consultant_Time_Agenda_Management__c</fullName>
    <label>Consultant Time/Agenda Management</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>