unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Contact_Email_for_Consult__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email_for_Consult__c</fullName>
    <label>Contact Email for Consult</label>
    <length>255</length>
    <type>Text</type>
</CustomField>