unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Contact_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Full_Name__c</fullName>
    <label>Contact Full Name</label>
    <type>TextArea</type>
</CustomField>