unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Contact_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact ID</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>GetFeedBack_Results</relationshipName>
    <type>Lookup</type>
</CustomField>