unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <label>Contact Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>