unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Contact_Number_Pre_Class_Interview__c.field-meta.xml
<CustomField>
    <fullName>Contact_Number_Pre_Class_Interview__c</fullName>
    <label>Contact Number: Pre-Class Interview</label>
    <length>40</length>
    <type>Text</type>
</CustomField>