unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Contact_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Contact_Phone_Number__c</fullName>
    <label>Contact Phone Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>