unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Content_was_organized_and_easy_to_follow__c.field-meta.xml
<CustomField>
    <fullName>Content_was_organized_and_easy_to_follow__c</fullName>
    <label>Content was organized and easy to follow</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>