unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Create_relationship_with_NCMi_Faculty__c.field-meta.xml
<CustomField>
    <fullName>Create_relationship_with_NCMi_Faculty__c</fullName>
    <label>Create relationship with NCMi Faculty</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>