unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Current_Training_Provider_Comments__c.field-meta.xml
<CustomField>
    <fullName>Current_Training_Provider_Comments__c</fullName>
    <label>Current Training Provider Comments</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>