unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Customer_Contacted__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contacted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Temporary Checkbox to allow for reporting on customers who have requested contact and have been subsequently contacted by NCM</description>
    <inlineHelpText>Temporary Checkbox to allow for reporting on customers who have requested contact and have been subsequently contacted by NCM</inlineHelpText>
    <label>Customer Contacted?</label>
    <type>Checkbox</type>
</CustomField>