unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Dan_S_Interactive_Addressed_Concerns__c.field-meta.xml
<CustomField>
    <fullName>Dan_S_Interactive_Addressed_Concerns__c</fullName>
    <label>Dan S: Interactive/Addressed Concerns</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>