unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Dan_S_interesting_practical__c.field-meta.xml
<CustomField>
    <fullName>Dan_S_interesting_practical__c</fullName>
    <label>Dan S:interesting/practical</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>