unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Danny_Interactive_Addressed_Concerns__c.field-meta.xml
<CustomField>
    <fullName>Danny_Interactive_Addressed_Concerns__c</fullName>
    <label>Danny: Interactive/Addressed Concerns</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>