unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Danny_Met_Training_Objectives__c.field-meta.xml
<CustomField>
    <fullName>Danny_Met_Training_Objectives__c</fullName>
    <label>Danny: Met Training Objectives</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>