unpackaged/main/default/objects/GetFeedBack_Results__c/fields/David_K_Interactive_Addressed_Concerns__c.field-meta.xml
<CustomField>
    <fullName>David_K_Interactive_Addressed_Concerns__c</fullName>
    <label>David K: Interactive&amp; Addressed Concerns</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>