unpackaged/main/default/objects/GetFeedBack_Results__c/fields/David_K_interesting_practical__c.field-meta.xml
<CustomField>
    <fullName>David_K_interesting_practical__c</fullName>
    <label>David K:interesting/practical</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>