unpackaged/main/default/objects/GetFeedBack_Results__c/fields/David_K_Met_Training_Objectives__c.field-meta.xml
<CustomField>
    <fullName>David_K_Met_Training_Objectives__c</fullName>
    <label>David K: Met Training Objectives</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>