unpackaged/main/default/objects/GetFeedBack_Results__c/fields/David_S_Interesting_Addressed_Concerns__c.field-meta.xml
<CustomField>
    <fullName>David_S_Interesting_Addressed_Concerns__c</fullName>
    <label>David S: Interesting/Addressed Concerns</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>