unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Days_Not_Contacted__c.field-meta.xml
<CustomField>
    <fullName>Days_Not_Contacted__c</fullName>
    <formula>IF( Please_Contact_Me__c = &quot;Yes&quot;, IF( Customer_Contacted__c = False,Created_Date__c - TODAY(),0), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Not Contacted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>