unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Dealership_Department_is_currently__c.field-meta.xml
<CustomField>
    <fullName>Dealership_Department_is_currently__c</fullName>
    <label>Dealership/Department is currently</label>
    <type>TextArea</type>
</CustomField>