unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Dealership_Name__c.field-meta.xml
<CustomField>
    <fullName>Dealership_Name__c</fullName>
    <label>Dealership Name</label>
    <type>TextArea</type>
</CustomField>