unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Dennis_Interested_Addressed_Concerns__c.field-meta.xml
<CustomField>
    <fullName>Dennis_Interested_Addressed_Concerns__c</fullName>
    <label>Dennis: Interested &amp; Addressed Concerns</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>