unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Dennis_Interesting_Practical__c.field-meta.xml
<CustomField>
    <fullName>Dennis_Interesting_Practical__c</fullName>
    <label>Dennis:interesting/practical</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>