unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Dennis_Met_Training_Objectives__c.field-meta.xml
<CustomField>
    <fullName>Dennis_Met_Training_Objectives__c</fullName>
    <label>Dennis: Met Training Objectives</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>