unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Dennis_Presenter_was_knowledgeable__c.field-meta.xml
<CustomField>
    <fullName>Dennis_Presenter_was_knowledgeable__c</fullName>
    <label>Dennis: Presenter was knowledgeable</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>