unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Develop_more_Sales_Transactions__c.field-meta.xml
<CustomField>
    <fullName>Develop_more_Sales_Transactions__c</fullName>
    <label>Develop more Sales Transactions</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>