unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Done_Differently_to_Improve_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Done_Differently_to_Improve_Meeting__c</fullName>
    <label>Done Differently to Improve Meeting</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>