unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Dustin_Interesting_Practical__c.field-meta.xml
<CustomField>
    <fullName>Dustin_Interesting_Practical__c</fullName>
    <label>Dustin: Interesting/Practical</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>