unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Dustin_Presenter_was_Knowledgeable__c.field-meta.xml
<CustomField>
    <fullName>Dustin_Presenter_was_Knowledgeable__c</fullName>
    <label>Dustin: Presenter was Knowledgeable</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>