unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Engagement__c.field-meta.xml
<CustomField>
    <fullName>Engagement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Engagement</label>
    <referenceTo>Engagement__c</referenceTo>
    <relationshipName>GetFeedBack_Results</relationshipName>
    <type>Lookup</type>
</CustomField>