unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Engagement_Attendee__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Attendee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Engagement Attendee</label>
    <referenceTo>Engagement_Attendee__c</referenceTo>
    <relationshipName>GetFeedBack_Results</relationshipName>
    <type>Lookup</type>
</CustomField>