unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Engagement_Owner__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Owner__c</fullName>
    <description>The engagement owner&#39;s name.</description>
    <formula>Engagement__r.Engagement_Owner__r.Contact_Name__c</formula>
    <inlineHelpText>The engagement owner&#39;s name.</inlineHelpText>
    <label>Engagement Owner</label>
    <type>Text</type>
</CustomField>