unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Food_was_tasteful_appropriate__c.field-meta.xml
<CustomField>
    <fullName>Food_was_tasteful_appropriate__c</fullName>
    <label>Food was tasteful &amp; appropriate</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>