unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Fred_Presentation_interesting_practical__c.field-meta.xml
<CustomField>
    <fullName>Fred_Presentation_interesting_practical__c</fullName>
    <label>Fred:Presentation interesting/practical</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>