unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Fred_Presenter_was_knowledgeable__c.field-meta.xml
<CustomField>
    <fullName>Fred_Presenter_was_knowledgeable__c</fullName>
    <label>Fred: Presenter was knowledgeable</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>