unpackaged/main/default/objects/GetFeedBack_Results__c/fields/George_Interactive_Addressed_Concerns__c.field-meta.xml
<CustomField>
    <fullName>George_Interactive_Addressed_Concerns__c</fullName>
    <label>George: Interactive/Addressed Concerns</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>