unpackaged/main/default/objects/GetFeedBack_Results__c/fields/George_Presentation_interesting_practica__c.field-meta.xml
<CustomField>
    <fullName>George_Presentation_interesting_practica__c</fullName>
    <label>George:Presentation interesting/practica</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>