unpackaged/main/default/objects/GetFeedBack_Results__c/fields/George_Presenter_was_knowledgeable__c.field-meta.xml
<CustomField>
    <fullName>George_Presenter_was_knowledgeable__c</fullName>
    <label>George: Presenter was knowledgeable</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>