unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Good_audio_visual_aids_were_used__c.field-meta.xml
<CustomField>
    <fullName>Good_audio_visual_aids_were_used__c</fullName>
    <label>Good audio-visual aids were used</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>