unpackaged/main/default/objects/GetFeedBack_Results__c/fields/How_did_Moderator_manage_the_group__c.field-meta.xml
<CustomField>
    <fullName>How_did_Moderator_manage_the_group__c</fullName>
    <label>20 Group Survey Moderator Group Manage</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>