unpackaged/main/default/objects/GetFeedBack_Results__c/fields/How_Prepared_was_Your_Moderator__c.field-meta.xml
<CustomField>
    <fullName>How_Prepared_was_Your_Moderator__c</fullName>
    <label>20 Group Survey Moderator Preparedness</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>