unpackaged/main/default/objects/GetFeedBack_Results__c/fields/How_Valuable_is_your_Retail_Coach__c.field-meta.xml
<CustomField>
    <fullName>How_Valuable_is_your_Retail_Coach__c</fullName>
    <label>How Valuable is your Retail Coach</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>