unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Hugh_G_Interesting_Addressed_Concerns__c.field-meta.xml
<CustomField>
    <fullName>Hugh_G_Interesting_Addressed_Concerns__c</fullName>
    <label>Hugh R: Interesting/Addressed Concerns</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>