unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Hugh_R_interesting_practical__c.field-meta.xml
<CustomField>
    <fullName>Hugh_R_interesting_practical__c</fullName>
    <label>Hugh R:interesting/practical</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>