unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Hugh_R_Met_Training_Objectives__c.field-meta.xml
<CustomField>
    <fullName>Hugh_R_Met_Training_Objectives__c</fullName>
    <label>Hugh R: Met Training Objectives</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>