unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Hugh_R_Presenter_was_knowledgeable__c.field-meta.xml
<CustomField>
    <fullName>Hugh_R_Presenter_was_knowledgeable__c</fullName>
    <label>Hugh R: Presenter was knowledgeable</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>