unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Implement_improvements_at_dealership__c.field-meta.xml
<CustomField>
    <fullName>Implement_improvements_at_dealership__c</fullName>
    <label>Implement improvements at dealership</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>