unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Improve_Dealer_Operation_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Improve_Dealer_Operation_Explanation__c</fullName>
    <label>Improve Dealer Operation Explanation</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>