unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Improve_Quality_of_Sales_Tranactions__c.field-meta.xml
<CustomField>
    <fullName>Improve_Quality_of_Sales_Tranactions__c</fullName>
    <label>Improve Quality of Sales Tranactions</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>