unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Instructor1_interactive_questions__c.field-meta.xml
<CustomField>
    <fullName>Instructor1_interactive_questions__c</fullName>
    <label>Instructor 1 interactive/ answ questions</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>